modif thomas pas fini

--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -13,297 +13,241 @@ http {
     server {
         listen       4244;
         server_name  webserv;
-        # Access and error logs
         access_log  /var/log/nginx/access.log;
         error_log   /var/log/nginx/error.log debug;
-        root /usr/share/nginx/html/html2;
+        root /;
 
-
-		location bonjour.html/ {
-			autoindex on;
+		location /test/ {
+			 alias /usr/share/nginx/html/html2;
 		}
-        # location /html2/ {
-        #     # Log all GET and POST requests to a file
-        #     access_log /var/log/nginx/endpoint_access.log combined;
-
-        #     # Handle GET requests
-        #     # root /html/;
-        #     # index index.html;
-        #     # autoindex on;
-        #     # Custom handling for POST requests
-        #     set $post_data_handled 0;
-        #     if ($request_method = POST) {
-        #         set $post_data_handled 1;
-        #     }       
-        #     add_header X-Debug-Webserv-Type "$http_webserv_type" always;
-        #     add_header X-Debug-Request-Method $request_method always;
-        #     # if ($http_webserv_type = "bonjour"){
-        #     #     return 200 'POST request received on default server with webserv_type = bonjour';
-        #     #     }
-        #     #
-        #     # Return response for POST requests
-        #     if ($post_data_handled) {
-        #         return 200 'POST request received on default server';
-        #     }
-
-        #     # Default behavior for GET requests
-        #     # try_files $uri $uri/ =404;
-
-        #     # Handle other request methods with a 405 Method Not Allowed response
-        #     if ($request_method != GET) {
-        #         return 405;
-        #     }
-        # }
-        # # location /html2/html3/ {
-        # #     access_log /var/log/nginx/endpoint_access.log combined;
-        # #     autoindex on;
-        # #     if ($request_method != GET) {
-        # #         return 405;
-        # #     }
-        # # }
-        # location /bonjour/ {
-        #     return 418;
-        # }
-        # location /bonjour/salut
-        #     {
-        #     return 419;
-        # }
-        # location /favicon.ico {
-
-        #     access_log /var/log/nginx/endpoint_access.log combined;
-        #      if ($request_method != GET) {
-        #         return 405;
-        #     }
-        # }
-        #
-        # location /bonjour{
-        #     return 305;
-        # }
-        location /redirect{
-            return 301 https://wikipedia.fr;
-        }
-        location /201 {
-            return 201;
-        }
-        location /202{
-            return 202;
-        }
-        location /203{
-            return 203;
-        }
-        location /204{
-            return 204;
-        }
-        location /205{
-        return 205;
-        }
-     location /206 {
-        return 206;
-    }
-    location /207 {
-        return 207;
-    }
-    location /208 {
-        return 208;
-    }
-    location /226 {
-        return 226;
-    }
-    location /300 {
-        return 300;
-    }
-    location /301 {
-        return 301;
-    }
-    location /302 {
-        return 302;
-    }
-    location /303 {
-        return 303;
-    }
-    location /304 {
-        return 304;
-    }
-    location /305 {
-        return 305;
-    }
-    location /306 {
-        return 306;
-    }
-    location /307 {
-        return 307;
-    }
-    location /308 {
-        return 308;
-    }
-    location /400 {
-        return 400;
-    }
-    location /401 {
-        return 401;
-    }
-    location /402 {
-        return 402;
-    }
-    location /403 {
-        return 403;
-    }
-    location /404 {
-        return 404;
-    }
-    location /405 {
-        return 405;
-    }
-    location /406 {
-        return 406;
-    }
-    location /407 {
-        return 407;
-    }
-    location /408 {
-        return 408;
-    }
-    location /409 {
-        return 409;
-    }
-    location /410 {
-        return 410;
-    }
-    location /411 {
-        return 411;
-    }
-    location /412 {
-        return 412;
-    }
-    location /413 {
-        return 413;
-    }
-    location /414 {
-        return 414;
-    }
-    location /415 {
-        return 415;
-    }
-    location /416 {
-        return 416;
-    }
-    location /417 {
-        return 417;
-    }
-    location /418 {
-        return 418;
-    }
-    location /421 {
-        return 421;
-    }
-    location /422 {
-        return 422;
-    }
-    location /423 {
-        return 423;
-    }
-    location /424 {
-        return 424;
-    }
-    location /425 {
-        return 425;
-    }
-    location /426 {
-        return 426;
-    }
-    location /428 {
-        return 428;
-    }
-    location /429 {
-        return 429;
-    }
-    location /431 {
-        return 431;
-    }
-    location /451 {
-        return 451;
-    }
-    location /500 {
-        return 500;
-    }
-    location /501 {
-        return 501;
-    }
-    location /502 {
-        return 502;
-    }
-    location /503 {
-        return 503;
-    }
-    location /504 {
-        return 504;
-    }
-    location /505 {
-        return 505;
-    }
-    location /506 {
-        return 506;
-    }
-    location /507 {
-        return 507;
-    }
-    location /508 {
-        return 508;
-    }
-    location /510 {
-        return 510;
-    }
-    location /511 {
-        return 511;
-    }
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-        error_page 404 /404.html;
-        location = /404.html{
-            root /usr/share/nginx/html;
-            allow all;
-        }
-    }
-    # server {
-    #     listen       4247;
-    #     server_name  localhostPOST;
-    #
-    #     # Access and error logs
-    #     access_log  /var/log/nginx/access.log;
-    #     error_log   /var/log/nginx/error.log debug;
-    #
-    #     location /html2 {
-    #                add_header X-Debug-Webserv-Type $http_webserv_type;
-    #     add_header X-Debug-Request-Method $request_method;
-    #         if ($http_webserv_type = "bonjour"){
-    #             return 200 'POST request received on POST server with webserv_type = bonjour';
-    #             }
-    #         # Log all GET and POST requests to a file
-    #         access_log /var/log/nginx/endpoint_access.log combined;
-    #
-    #         # Custom handling for POST requests
-    #         if ($request_method = POST) {
-    #             return 200 'POST request received on POST server';
-    #         }
-    #
-    #         # Default behavior for GET requests
-    #         root /usr/share/nginx;
-    #         index index.html;
-    #
-    #         # Handle other request methods with a 405 Method Not Allowed response
-    #         if ($request_method != GET) {
-    #             return 405;
-    #         }
-    #
-    #         # Default behavior
-    #         try_files $uri $uri/ =404;
-    #     }
-    #
-    #     error_page   500 502 503 504  /50x.html;
-    #     location = /50x.html {
-    #         root   /usr/share/nginx/html;
-    #     }
-    # }
+	}
 }
+
+        # location /redirect{
+        #     return 301 https://wikipedia.fr;
+#         }
+#         location /201 {
+#             return 201;
+#         }
+#         location /202{
+#             return 202;
+#         }
+#         location /203{
+#             return 203;
+#         }
+#         location /204{
+#             return 204;
+#         }
+#         location /205{
+#         return 205;
+#         }
+#      location /206 {
+#         return 206;
+#     }
+#     location /207 {
+#         return 207;
+#     }
+#     location /208 {
+#         return 208;
+#     }
+#     location /226 {
+#         return 226;
+#     }
+#     location /300 {
+#         return 300;
+#     }
+#     location /301 {
+#         return 301;
+#     }
+#     location /302 {
+#         return 302;
+#     }
+#     location /303 {
+#         return 303;
+#     }
+#     location /304 {
+#         return 304;
+#     }
+#     location /305 {
+#         return 305;
+#     }
+#     location /306 {
+#         return 306;
+#     }
+#     location /307 {
+#         return 307;
+#     }
+#     location /308 {
+#         return 308;
+#     }
+#     location /400 {
+#         return 400;
+#     }
+#     location /401 {
+#         return 401;
+#     }
+#     location /402 {
+#         return 402;
+#     }
+#     location /403 {
+#         return 403;
+#     }
+#     location /404 {
+#         return 404;
+#     }
+#     location /405 {
+#         return 405;
+#     }
+#     location /406 {
+#         return 406;
+#     }
+#     location /407 {
+#         return 407;
+#     }
+#     location /408 {
+#         return 408;
+#     }
+#     location /409 {
+#         return 409;
+#     }
+#     location /410 {
+#         return 410;
+#     }
+#     location /411 {
+#         return 411;
+#     }
+#     location /412 {
+#         return 412;
+#     }
+#     location /413 {
+#         return 413;
+#     }
+#     location /414 {
+#         return 414;
+#     }
+#     location /415 {
+#         return 415;
+#     }
+#     location /416 {
+#         return 416;
+#     }
+#     location /417 {
+#         return 417;
+#     }
+#     location /418 {
+#         return 418;
+#     }
+#     location /421 {
+#         return 421;
+#     }
+#     location /422 {
+#         return 422;
+#     }
+#     location /423 {
+#         return 423;
+#     }
+#     location /424 {
+#         return 424;
+#     }
+#     location /425 {
+#         return 425;
+#     }
+#     location /426 {
+#         return 426;
+#     }
+#     location /428 {
+#         return 428;
+#     }
+#     location /429 {
+#         return 429;
+#     }
+#     location /431 {
+#         return 431;
+#     }
+#     location /451 {
+#         return 451;
+#     }
+#     location /500 {
+#         return 500;
+#     }
+#     location /501 {
+#         return 501;
+#     }
+#     location /502 {
+#         return 502;
+#     }
+#     location /503 {
+#         return 503;
+#     }
+#     location /504 {
+#         return 504;
+#     }
+#     location /505 {
+#         return 505;
+#     }
+#     location /506 {
+#         return 506;
+#     }
+#     location /507 {
+#         return 507;
+#     }
+#     location /508 {
+#         return 508;
+#     }
+#     location /510 {
+#         return 510;
+#     }
+#     location /511 {
+#         return 511;
+#     }
+#         error_page   500 502 503 504  /50x.html;
+#         location = /50x.html {
+#             root   /usr/share/nginx/html;
+#         }
+#         error_page 404 /404.html;
+#         location = /404.html{
+#             root /usr/share/nginx/html;
+#             allow all;
+#         }
+#     }
+#     # server {
+#     #     listen       4247;
+#     #     server_name  localhostPOST;
+#     #
+#     #     # Access and error logs
+#     #     access_log  /var/log/nginx/access.log;
+#     #     error_log   /var/log/nginx/error.log debug;
+#     #
+#     #     location /html2 {
+#     #                add_header X-Debug-Webserv-Type $http_webserv_type;
+#     #     add_header X-Debug-Request-Method $request_method;
+#     #         if ($http_webserv_type = "bonjour"){
+#     #             return 200 'POST request received on POST server with webserv_type = bonjour';
+#     #             }
+#     #         # Log all GET and POST requests to a file
+#     #         access_log /var/log/nginx/endpoint_access.log combined;
+#     #
+#     #         # Custom handling for POST requests
+#     #         if ($request_method = POST) {
+#     #             return 200 'POST request received on POST server';
+#     #         }
+#     #
+#     #         # Default behavior for GET requests
+#     #         root /usr/share/nginx;
+#     #         index index.html;
+#     #
+#     #         # Handle other request methods with a 405 Method Not Allowed response
+#     #         if ($request_method != GET) {
+#     #             return 405;
+#     #         }
+#     #
+#     #         # Default behavior
+#     #         try_files $uri $uri/ =404;
+#     #     }
+#     #
+#     #     error_page   500 502 503 504  /50x.html;
+#     #     location = /50x.html {
+#     #         root   /usr/share/nginx/html;
+#     #     }
+#     # }
+# }
