conf test alias

--- a/config/good_config/dumas.conf
+++ b/config/good_config/dumas.conf
@@ -1,10 +1,10 @@
 server {
 	server_name	test;
-	listen 127.0.0.1:4252;
+	listen 127.0.0.1:4251;
 	root ./website;
 
-	location /jambon {
-		alias ./website/dumas ;
+	location /dumas {
+
 		index site.html;
 	}
 }
