--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -16,11 +16,14 @@ http {
         # Access and error logs
         access_log  /var/log/nginx/access.log;
         error_log   /var/log/nginx/error.log debug;
-        root /usr/share/nginx/;
+        root /usr/share/nginx/html;
 
         location /jambon {
     alias /usr/share/nginx/html/html2;
     index bonjour.html;
+}
+location /html3/html2{
+    index index.html;
 }
         #
         # location /html2/ {
