started to add another Request class and clean up code, have to add check for method and finish parsing and add cgi to main client

--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -19,7 +19,7 @@ http {
         root /usr/share/nginx/html;
 
         location /jambon {
-    alias /usr/share/nginx/html/html2;
+    alias /usr/share/nginx/html/html2/coucou.html;
     index bonjour.html;
 }
 location /html3/html2{
