--- a/config/good_config/dumas.conf
+++ b/config/good_config/dumas.conf
@@ -1,9 +1,9 @@
 server {
 	server_name	test;
-	listen 127.0.0.1:4251;
+	listen 127.0.0.1:4250;
 	root ./website;
 
-	location /dumas {
+	location /test/dumas {
 
 		index site.html;
 	}
