--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -17,7 +17,7 @@ server {
 	}
     location /directory/ {
 		set_method GET off;
-		alias ./tester/;
+		root ./tester/;
 		index tester nop/youpi.bad_extension;
 	}
 }
