--- a/config/good_config/tester.conf
+++ b/config/good_config/tester.conf
@@ -1,8 +1,12 @@
 server {
-	listen 127.0.0.1:4256;
+	listen 127.0.0.1:4255;
 	root ./tester/YoupiBanane;
 	server_name	webserv;
-
+	error_page 403 404 405 406 /418.html;
+	
+	location = /418.html {
+		root ./html/error_pages;
+	}
 	location /post_body/ {
 		client_max_body_size 100;
 		set_method	POST on;
@@ -10,9 +14,12 @@ server {
 	location / {
 		index youpi.bad_extension;
 	}
-	location /directory {
+	location = /directory {
 		set_method GET on;
 		alias ./tester/YoupiBanane/;
-		index youpi.bad_extension nop/youpi.bad_extension;
+	}
+	location = /directory/ {
+		set_method GET on;
+		alias ./tester/YoupiBanane/;
 	}
 }
