have to fix multipart in case of big upload

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -1,8 +1,7 @@
 server {
-    listen 127.0.0.1:4250 ;
+    listen 127.0.0.1:4252 ;
 
     server_name webserv ;
-    client_max_body_size 12k ;
     root ./html/;
 
     error_page 404 405 406 /418.html;
@@ -18,7 +17,7 @@ server {
 	}
 
 	location /favicon.ico{
-		return 301 http://localhost/404.html;
+		return 301 http://localhost/418.html;
 	}
 
 	location /imageGIF.html{
@@ -35,12 +34,7 @@ server {
 		index index.html;
 	}
 
-  location = /coucou/ {
-        cgi .php welcome.php;        
-        set_method POST DELETE GET on;
-        upload_location /upload/;
-    }
-location = /upload {
+ location = /upload {
         cgi .php welcome.php;        
         set_method POST DELETE GET on;
         upload_location /upload/;
@@ -49,5 +43,8 @@ location = /upload {
 	location / {
 		autoindex on;
 	}
-
+location /coucou/ {
+    set_method POST DELETE GET on;
+    index uploadTest.html;
+}
 }
