--- a/config/good_config/cgi.conf
+++ b/config/good_config/cgi.conf
@@ -2,35 +2,40 @@ server {
     listen 127.0.0.1:4250;
     server_name webserv ;
     client_max_body_size 12k ;
-    root ./html/cgi_failure;
+    root ./html/;
 
     error_page 404 405 406 /404.html;
 
-    location / {            
+    location / {
+        root ./html/cgi_failure;            
         cgi .py loop.py;        
         upload_location /cookies/;
         path_info on;
         set_method POST DELETE GET on;
     }  
-    location /python/ {            
+    location /python/ {
+        root ./html/cgi;
         cgi .py welcome.py;        
         upload_location /cookies/;
         path_info on;
         set_method POST DELETE GET on;
     }
-    location /ruby/ {            
+    location /ruby/ {
+        root ./html/cgi;
         cgi .rb welcome.rb;        
         upload_location /cookies/;
         path_info on;
         set_method POST DELETE GET on;
     }
-    location /perl/ {            
+    location /perl/ {
+        root ./html/cgi;
         cgi .pl welcome.pl;        
         upload_location /cookies/;
         path_info on;
         set_method POST DELETE GET on;
     }
-    location /php/ {            
+    location /php/ {
+        root ./html/cgi;
         cgi .php jokes.php;        
         upload_location /cookies/;
         path_info on;
