fixed chunk and upload, have to fix  infinite loop im multipart and test delete and upload different disk

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -34,7 +34,14 @@ server {
 		index index.html;
 	}
 
- location = /upload {
+	location /coucou/ {
+  
+  cgi .php welcome.php;        
+	set_method POST DELETE GET on;
+	upload_location /upload/;
+	}
+
+ location  /upload/ {
         cgi .php welcome.php;        
         set_method POST DELETE GET on;
         upload_location /upload/;
