--- a/config/good_config/taylor.conf
+++ b/config/good_config/taylor.conf
@@ -3,6 +3,9 @@ server {
     listen 4252;
     root ./website/taylor;
     location / {
+        alias ./website/taylor;
         index site.html;
+        set_method GET POST DELETE on;
+        upload_location /html/;
     }
 }
