add IP client in Client constructor

--- a/config/good_config/dumas.conf
+++ b/config/good_config/dumas.conf
@@ -1,10 +1,9 @@
 server {
 	server_name	test;
-	listen 127.0.0.1:4250;
+	listen 127.0.0.1:4251;
 	root ./website;
 
-	location /test/dumas {
-
+	location /dumas {
 		index site.html;
 	}
 }
