--- a/config/good_config/dumas.conf
+++ b/config/good_config/dumas.conf
@@ -1,9 +1,15 @@
 server {
-	server_name	test;
-	listen 127.0.0.1:4251;
+	server_name server_test;
+	listen 127.0.0.1:4250;
 	root ./website;
 
-	location /dumas {
-		index site.html;
+	location / {
+	}
+
+	location /jambon {
+		alias ./srcs;
+		autoindex on;
+	
+
 	}
 }
