multipart and upload done

--- a/config/good_config/cgi.conf
+++ b/config/good_config/cgi.conf
@@ -45,4 +45,10 @@ server {
         set_method POST DELETE GET on;
         autoindex on;
     }
+    location /mini/ {
+        set_method POST GET on;
+        set_method DELETE off;
+        index index.html;
+        cgi .py test.py;
+    }
 }
