--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -39,16 +39,15 @@ server {
 		index index.html;
 	}
 
-	location /coucou/ {
-  
-  cgi .php welcome.php;        
-	set_method POST DELETE GET on;
-	upload_location /upload/;
-	}
 
  location  /upload {
         cgi .php welcome.php;        
         set_method POST DELETE GET on;
         upload_location /upload/;
     }
+	location /coucou/ {
+		index uploadTest.html;
+		autoindex on;
+        upload_location /upload/;
+	}
     }
