--- a/config/good_config/dumas.conf
+++ b/config/good_config/dumas.conf
@@ -3,13 +3,15 @@ server {
 	listen 127.0.0.1:4250;
 	root ./website;
 
-	location / {
+	location  /dumas {
+		index site.html;
+		autoindex on;
+		set_method POST DELETE GET on;
+		root ./website;
 	}
 
-	location /jambon {
-		alias ./srcs;
-		autoindex on;
-	
-
+	location /to_delete/ {
+		index test;
+		set_method POST DELETE GET on;
 	}
 }
