--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -41,8 +41,8 @@ server {
 
 
  location  /upload {
-        cgi .php welcome.php;        
-        set_method POST DELETE GET on;
+        cgi .py welcome.py;        
+        set_method DELETE GET on;
         upload_location /upload/;
     }
 	location /coucou/ {
